--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "scripts": {
     "clean:dist": "rm -rf dist/*",
     "build": "yarn build-es5 && yarn build-es6",
-    "build-es5": "tsc --target es5 --outDir dist/es5 --removeComments --lib es2015",
-    "build-es6": "tsc",
+    "build-es5": "tsc --target es5 --outDir dist/es5 --removeComments --lib 'es2015,dom'",
+    "build-es6": "tsc --lib es6,dom",
     "lint": "eslint . --ext .js,.ts"
   },
   "main": "dist/es6/index.js",
